<resources>
    <string name="app_name">NoteApp</string>
    <string name="title_activity_study_options">Study_options</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="Delete">Delete</string>
    <string name="Arabic">Arabic</string>
    <string name="Show_all">Show all</string>
    <string name="English">English</string>
    <string name="Language">Language</string>
    <string name="Work_button">Work List</string>
    <string name="Shopping_button">Shopping List</string>
    <string name="To_do_list">To Do List</string>
    <string name="Study_button">Study List</string>
    <string name="Monthly_button">Monthly Gaols</string>
    <string name="Yearly_button">Yearly Gaols</string>
    <string name="Money_button">Financial List</string>
    <string name="changed">You have change the language successfully </string>
    <string name="message_show_all">All notes are here </string>
    <string name="message_delete">You have delete all </string>
    <string name="notes">Write your note here</string>
    <string name="Title">Note Title</string>
    <string name="input_note">Write here</string>
    <string name="Save">Save</string>
    <string name="enter_note">Enter Note</string>
    <string name="start">START</string>
    <string name="stop">STOP</string>
    <string name="SET">SET</string>
    <string name="message_minutes">"Set your timer please ? "</string>
    <string name="search">search</string>
</resources>