<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".First_page"
    android:background="@drawable/background"
    >

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="400dp"
        android:layout_height="450dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.238"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/work_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_first_page"
            android:text="@string/Work_button"
            android:textSize="25dp" />

        <Button
            android:id="@+id/shopping_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_first_page"
            android:text="@string/Shopping_button"
            android:textSize="25dp" />

        <Button
            android:id="@+id/todo_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_first_page"
            android:text="@string/To_do_list"
            android:textSize="25dp" />

        <Button
            android:id="@+id/study_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_first_page"
            android:text="@string/Study_button"
            android:textSize="25dp" />

        <Button
            android:id="@+id/monthly_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_first_page"
            android:text="@string/Monthly_button"
            android:textSize="25dp" />

        <Button
            android:id="@+id/yearly_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_first_page"
            android:text="@string/Yearly_button"
            android:textSize="25dp" />

        <Button
            android:id="@+id/money_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_first_page"
            android:text="@string/Money_button"
            android:textSize="25dp" />

    </LinearLayout>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/add_button"
        android:id="@+id/add_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.851"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>













