<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Study_page"
    android:background="@color/DefaultColor"
    >


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="53dp">


        <Button
            android:id="@+id/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="72dp"
            android:layout_marginBottom="315dp"
            android:onClick="Start_button"
            android:text="@string/start"
            app:layout_constraintEnd_toEndOf="parent"
            tools:layout_editor_absoluteY="408dp" />


        <EditText
            android:id="@+id/input_timer"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_above="@+id/stop"
            android:layout_alignParentStart="true"
            android:layout_marginStart="85dp"
            android:layout_marginEnd="36dp"
            android:layout_marginBottom="136dp"
            android:layout_toStartOf="@+id/timer"
            android:hint="Minutes"
            android:inputType="number"
            android:maxLength="4"
            android:textColorHint="@color/withColor" />

        <Button
            android:id="@+id/set"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/start"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="164dp"
            android:layout_marginBottom="74dp"
            android:onClick="set_button"
            android:text="@string/SET" />

        <Button
            android:id="@+id/stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="71dp"
            android:layout_marginBottom="320dp"
            android:onClick="Stop_button"
            android:text="@string/stop"
            app:layout_constraintEnd_toStartOf="@+id/start"
            app:layout_constraintHorizontal_bias="0.64"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="408dp" />

        <TextView
            android:id="@+id/timer"
            android:layout_width="110dp"
            android:layout_height="35dp"
            android:layout_above="@+id/start"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="97dp"
            android:layout_marginBottom="147dp"
            android:textColor="@color/withColor" />

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>